--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
+    "firebase": "^9.9.1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
