projecto terminado y depurado

--- a/src/.env
+++ b/src/.env
@@ -4,4 +4,4 @@ REACT_APP_projectId=ecommerce-project-reactjs,
 REACT_APP_storageBucket=ecommerce-project-reactjs.appspot.com,
 REACT_APP_messagingSenderId=264127430370,
 REACT_APP_appId=1:264127430370:web:9822d975e67e2c505ce8bb,
-REACT_APP_measurementId=G-0N2TVXBSP6
+REACT_APP_measurementId=G-0N2TVXBSP6,
